--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -20,6 +20,6 @@
     <item
         android:id="@+id/postItem"
         android:icon="@drawable/chat_ck"
-        android:title="게시판" />
+        android:title="자주묻는질문" />
 
 </menu>
