--- a/app/src/main/res/layout/quest_add.xml
+++ b/app/src/main/res/layout/quest_add.xml
@@ -7,6 +7,14 @@
     tools:context=".QuestAdd">
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:src="@drawable/background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/imageView"
         android:layout_width="27dp"
         android:layout_height="27dp"
@@ -22,10 +30,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
         android:layout_marginTop="35dp"
         android:fontFamily="@font/atitlegothic3"
-        android:text="질문 제목을 써주세요"
+        android:text="자주묻는질문 추가하기"
         android:textColor="@color/backgroundGray"
         android:textSize="30dp"
         app:layout_constraintStart_toEndOf="@+id/imageView"
