--- a/app/src/main/res/layout/quest_listview.xml
+++ b/app/src/main/res/layout/quest_listview.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".QuestView">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:src="@drawable/background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
         android:id="@+id/listview"
         android:layout_width="377dp"
