--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,19 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="none">
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="10">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="8"
         android:background="@drawable/background"
+        android:layout_gravity="top"
         android:orientation="vertical">
+
 
         <TextView
             android:id="@+id/Hospital"
@@ -263,13 +265,6 @@
                 android:textSize="12dp" />
 
         </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        
-
-    </LinearLayout>
 
 </LinearLayout>
 
