--- a/app/src/main/res/layout/quest_detail.xml
+++ b/app/src/main/res/layout/quest_detail.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".QuestItem">
 
     <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
@@ -13,25 +15,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/title_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="38dp"
-        android:fontFamily="@font/atitlegothic3"
-        android:text="Lorem ipsum dolor sit amet"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/detail_detail"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <View
         android:id="@+id/view2"
-        android:layout_width="376dp"
-        android:layout_height="638dp"
+        android:layout_width="373dp"
+        android:layout_height="499dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/rectangle"
@@ -42,28 +30,10 @@
         app:layout_constraintTop_toBottomOf="@+id/title_detail" />
 
     <TextView
-        android:id="@+id/textContents"
-        android:layout_width="307dp"
-        android:layout_height="460dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/atitlegothic2"
-        android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-        sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-        sed diam voluptua.Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-        sed diam voluptua...."
-        android:textColor="@color/textColor"
-        android:textSize="12dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
-        app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintStart_toStartOf="@+id/view2" />
-
-    <TextView
         android:id="@+id/content_detail"
         android:layout_width="314dp"
         android:layout_height="96dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/atitlegothic2"
         android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
         sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
@@ -74,13 +44,33 @@
         sed diam voluptua...."
         android:textColor="@color/textColor"
         android:textSize="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/textContents"
         app:layout_constraintEnd_toEndOf="@+id/view2"
+        app:layout_constraintHorizontal_bias="0.559"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toTopOf="@+id/view2" />
 
-    <ImageView
+    <TextView
         android:id="@+id/detail_detail"
+        android:layout_width="312dp"
+        android:layout_height="307dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/atitlegothic2"
+        android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+        sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+        sed diam voluptua.Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+        sed diam voluptua...."
+        android:textColor="@color/textColor"
+        android:textSize="12dp"
+        app:layout_constraintEnd_toEndOf="@+id/view2"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="@+id/view2"
+        app:layout_constraintTop_toBottomOf="@+id/content_detail" />
+
+    <ImageView
+        android:id="@+id/imageView5"
         android:layout_width="27dp"
         android:layout_height="27dp"
         android:layout_marginStart="20dp"
@@ -88,4 +78,18 @@
         android:src="@drawable/arrow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/title_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/atitlegothic2"
+        android:text="제목"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
+        app:layout_constraintTop_toTopOf="@+id/imageView4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
