--- a/app/src/main/res/layout/child_row.xml
+++ b/app/src/main/res/layout/child_row.xml
@@ -14,6 +14,7 @@
         android:textSize="12dp"
         android:lineSpacingExtra="1.5dp"
         android:textColor="@color/textColor"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginLeft="20dp"
+       />
 
 </LinearLayout>
