--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,23 +13,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="78dp"
-            android:layout_gravity="center"
+            android:layout_height="63dp"
+            android:layout_marginTop="200dp"
             android:background="@drawable/rectangle"
-            android:drawableLeft="@drawable/day1"
             android:fontFamily="@font/atitlegothic3"
             android:gravity="center"
             android:text="다음 접종까지 26일 남았습니다."
             android:textColor="@color/purple_700"
-            android:textSize="13dp" />
+            android:textSize="20dp" />
 
     </LinearLayout>
 
@@ -38,14 +35,15 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_gravity="bottom|fill_horizontal"
-            android:src="@drawable/image1" />
+            android:layout_width="wrap_content"
+            android:layout_height="318dp"
+            android:layout_gravity="bottom"
+            android:layout_margin="15dp"
+            android:background="@drawable/rectangle"
+            android:scaleType="fitXY"
+            android:src="@drawable/image5" />
 
     </LinearLayout>
-
-
 
     <Button
         android:id="@+id/homeBtn"
@@ -88,4 +86,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/infoBtn" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
