--- a/app/src/main/res/layout/group_row.xml
+++ b/app/src/main/res/layout/group_row.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <TextView android:id="@+id/groupName"
+    <TextView
+        android:id="@+id/groupName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="19dp"
         android:layout_marginLeft="19dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/atitlegothic3"
-        android:textColor="@color/purple_700"
-        android:lineSpacingExtra="1.5dp"
         android:text="HPV 백신이란?"
+        android:textColor="@color/purple_700"
         android:textSize="17dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imgMore"
@@ -24,7 +26,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="19dp"
         android:layout_marginRight="19dp"
-        android:layout_marginStart="230dp"
-        android:src="@drawable/more_ck" />
+        android:src="@drawable/more_ck"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
